# Routerv3

./: .gitignore  README.md  ROADMAP.md  requirements.txt
docs/: engine_access.md  performance.md
kicad_plugin/: README.md
kicad_plugin/llm_advisor/: .env.example  __init__.py  board_summary.py  llm_client.py
notebooks/: 00_setup.ipynb
pcbworld/agents/: ppo_baseline.py
pcbworld/data/: generate_board.py
pcbworld/engine/: __init__.py
pcbworld/engine/cpp/: CMakeLists.txt  bindings.cpp  gui_tool_stubs.cpp  kicad_headless_mocks.cpp  pns_bridge.cpp  pns_bridge.h
pcbworld/env/: pcb_route_env.py
scripts/: make_toy_board.py  verify_routed_board.py
tests/: fake_bridge.py  test_pcb_route_env.py  test_ppo_baseline.py
